--- a/my-website/public/index.html
+++ b/my-website/public/index.html
@@ -2,17 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/siteicon.png" type="image/x-icon" />
+    <meta name="author" content="kearnie lin">
+    <meta name="description" content="kearnie's personal website">
+    <meta property="og:image" content="%PUBLIC_URL%/landingpage.png">
+    <meta property="og:description" content="doing good work, helping others, and being kind">
+    <meta property="og:title" content="kearnie">
+    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#cbddf2" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,10 +28,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>kearnie lin</title>
+    <title>kearnie!</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Please enable JavaScript to view!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
