--- a/my-website/public/index.html
+++ b/my-website/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>kearnie!</title>
+    <title>kearnie</title>
   </head>
   <body>
     <noscript>Please enable JavaScript to view!</noscript>
