--- a/my-website/public/index.html
+++ b/my-website/public/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="kearnie lin">
     <meta name="description" content="kearnie's personal website">
     <meta property="og:image" content="%PUBLIC_URL%/landingpage.png">
-    <meta property="og:description" content="doing good work, helping others, and being kind">
+    <meta property="og:description" content="doing good work">
     <meta property="og:title" content="kearnie">
     <link href="https://fonts.googleapis.com/css?family=Raleway:900&display=swap" rel="stylesheet">
     <meta
