--- a/my-website/public/index.html
+++ b/my-website/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/landingpage.png">
     <meta property="og:description" content="doing good work">
     <meta property="og:title" content="kearnie">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/sfx7jcy.css">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
